cleanup Schaakcompetitie.Frontend

--- a/Schaakcompetitie.Frontend/Schaakcompetitie.Frontend/Views/Home/Create.cshtml
+++ b/Schaakcompetitie.Frontend/Schaakcompetitie.Frontend/Views/Home/Create.cshtml
@@ -39,5 +39,9 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Terug naar stand overzicht</a>
 </div>
+
+@section Scripts {
+    @{ await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+}
